vlib/v/checker/tests/return_missing_match_if.vv
fn main() {}

fn foo() string {
    match 1 {
        1 { return '' }
        2 {
            if true {
                
            } else {
                return ''
            }
        }
        else { return '' }
    }
}
